@@ -1,8 +1,15 @@
 
+if GNOME
 bin_PROGRAMS		= gnome-5250
+else
+bin_PROGRAMS		= gtk-5250
+endif
 
 gnome_5250_SOURCES	= gnome-5250.c\
 			  gtk5250terminal.c
+
+gtk_5250_SOURCES	= gtk-5250.c\
+	                  gtk5250terminal.c
 
 noinst_HEADERS		= gtk5250terminal.h
 
